# uni-framework

./: .gitignore  README.md  README_en.md
docs/impl/: 20260603_090000_v1_verification.md  20260603_100000_multi_task.md  20260603_120000_profiler.md  20260603_130000_nlc_dgemm.md  20260603_phase2_close.md  20260603_phase4_impl.md  20260603_tc001_pcie_bw.md  20260603_tc002_throughput.md  20260603_tc003_pipeline_latency.md  20260603_tc004_mpi.md  20260604_project_summary.md  20260604_tc005_power.md  20260720_final_acceptance.md
docs/plan/: 20260601_090918_development_roadmap.md  20260603_090000_v1_verification_case.md  20260603_100000_multi_task_flow.md  20260603_110000_pipeline.md  20260603_phase3_bench_plan.md  20260604_monte_carlo_plan.md
docs/research/: 20260601_090918_heterogeneous_system_analysis.md  20260603_bench_conclusions.md  20260604_virtio_investigation.md
env/: pyproject.toml
examples/basic/: README.md  run.sh
examples/multi_task/: README.md  run.sh  task_flow.py
examples/pipeline/: README.md  pipeline.py  run.sh
scripts/: bench_all.py  bench_mpi.py  bench_pcie.py  bench_pipeline_latency.py  bench_power.py  bench_throughput.py  check_hw.sh  run_all.sh  run_verify.py
src/apps/hetero_dataprep/: dataprep_app.py
src/apps/hetero_spmv/: spmv_app.py  spmv_compare.py
src/apps/monte_carlo/: mc_app.py
src/benchmarks/: __init__.py  multi_device_throughput.py  pcie_bw_stress.py  pipeline_latency.py
src/scheduler/: __init__.py  devices.py  numa.py  phi.py  power.py  profiler.py  task_graph.py  ve.py
tests/: test_scheduler.py
(+17 files in other folders)
